[package]
edition = "2021"
name = "demo3"
version = "0.1.0"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
anyhow = "1.0.86"
once_cell = "1.19.0"
url = "2.5.2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

